--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "description": "",
   "main": "index.js",
   "type": "module",
+
   "scripts": {
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose"
+    "test": "jest --config=./src/jest.config.json"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "jest": "^29.1.2"
+    "@babel/core": "^7.20.2",
+    "@babel/preset-env": "^7.20.2",
+    "babel-jest": "^29.3.1",
+    "jest": "^29.1.2",
+    "jest-chain": "^1.1.6"
   }
 }
