--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "index.js",
   "type": "module",
-
   "scripts": {
     "test": "jest --config=./src/jest.config.json"
   },
@@ -15,6 +14,7 @@
     "@babel/preset-env": "^7.20.2",
     "babel-jest": "^29.3.1",
     "jest": "^29.1.2",
-    "jest-chain": "^1.1.6"
+    "jest-chain": "^1.1.6",
+    "jest-extended": "^3.1.0"
   }
 }
