--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "jest --config=./src/jest.config.json",
     "verbose": "jest --config=./src/jest.config.json --verbose",
-    "coverage": "jest --config=./src/jest.config.json --coverage"
+    "coverage": "jest --config=./src/jest.config.json --coverage",
+    "single": "node_modules/.bin/jest --config=./src/jest.config.json --verbose"
   },
   "author": "",
   "license": "MIT",
