--- a/src/jest.config.json
+++ b/src/jest.config.json
@@ -1,6 +1,9 @@
  {
-  "setupFilesAfterEnv": ["./testSetup.js"]
+  "setupFilesAfterEnv": ["./testSetup.js"],
+  "coveragePathIgnorePatterns" : [
+    "src/.internal/"
+  ],
+  "testPathIgnorePatterns" : [
+    "src/.internal/"
+  ]
 }
-
- 
-
